# cargo-csc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  code-spellcheck.json  custom.txt  rustfmt.toml  test.trie
src/: args.rs  code.rs  cspell.rs  dictionary.rs  filesystem.rs  git.rs  lsp.rs  main.rs  multi_trie.rs  settings.rs  trie.rs
src/cspell/: trie.rs
src/cspell/trie/: spec.rs  v4.rs
src/cspell/trie/v4/: constants.rs  mod.rs
