[package]
name = "cargo-csc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "2.0"
blake3 = "1.8"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
glob = "0.3"
ignore = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
num_cpus = "1.16.0"
rand = "0.9.1"
rayon = "1.10"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde-hjson = "*"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-go = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "=0.23.6"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
url = "2.5.4"
