[package]
name = "cargo-csc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "2.0"
blake3 = "1.8"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
git2 = "0.20.2"
glob = "0.3"
ignore = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
num_cpus = "1.16.0"
rand = "0.9.1"
rayon = "1.10"
relative-path = "1.9.3"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde-hjson = "*"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-md = "0.3"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23.2"
url = "2.5.4"
