[package]
name = "cargo-csc"
version = "0.1.0"
edition = "2024"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
description = "Code spell checking"
readme = "README.md"
repository = "https://github.com/arihant2math/cargo-csc.git"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["spellcheck"]

[dependencies]
ahash = "0.8"
aho-corasick = "1.1"
anyhow = "1.0"
bincode = "2.0"
blake3 = "1.8"
bytes = "1.10"
cached = "0.55"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
flate2 = "1.1"
fst = { version = "0.4", features = ["levenshtein"] }
git2 = "0.20"
glob = "0.3"
ignore = "0.4"
miette = { version = "7.6", features = ["fancy", "syntect-highlighter"] }
num_cpus = "1.16"
regex = "1"
relative-path = "2.0"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-hjson = "1.1"
serde_json = "1.0"
strsim = "0.11"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-md = "0.3"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
url = "2.5"
walkdir = "2.5.0"
